--- a/pytest/api-testing/pyproject.toml
+++ b/pytest/api-testing/pyproject.toml
@@ -12,6 +12,8 @@ pytest-mock = "^3.12.0"
 requests = "^2.31.0"
 responses = "^0.24.1"
 pytest-regressions = "^2.5.0"
+vcrpy = "^5.1.0"
+pytest-vcr = "^1.0.2"
 
 
 [build-system]
